--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-shadow-2": "^4.1.0",
+    "react-native-shadow-cards": "^1.0.2",
     "react-native-svg": "^12.1.1",
     "react-native-toast-message": "^1.4.9",
     "react-redux": "^7.2.4",
